ver. 0.1 head and meta framework

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
-    <title>Test</title>
+    <meta name="author" content="Oscar Peterson">
+    <meta name="description" content="This is the WDD230 Assignment Portal for Oscar Peterson.">
+    <title>Assignment Portal</title>
+    <link rel="stylesheet" href="styles.css" media="screen">
 </head>
 <body>
-    <h1>Testing</h1>
+    <h1>WDD230: Assignment Portal</h1>
 </body>
 </html>
