--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <title>Assignment Portal</title>
     <link rel="stylesheet" href="styles.css" media="screen">
 </head>
+<header>
+    <img src="Me Pic.jpg" alt="picture of me" class="portal-header-img">
+    <h1 class="portal-header-name">Oscar Peterson</h1>
+</header>
 <body>
-    <h1>WDD230: Assignment Portal</h1>
+    <h1 class="portal-headline">WDD230: Assignment Portal</h1>
+    <ul class="portal-list">
+        <li>This will be updated as assignments are added.</li>
+    </ul>
 </body>
+<footer>
+    
+</footer>
 </html>
