--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css" media="screen">
 </head>
 <header>
-    <img src="Me Pic.jpg" alt="picture of me" class="portal-header-img">
+    <img src="https://github.com/OscaPete/wdd230/blob/main/images/Me%20Pic.jpg?raw=true" alt="picture of me" class="portal-header-img">
     <h1 class="portal-header-name">Oscar Peterson</h1>
 </header>
 <body>
@@ -20,7 +20,7 @@
     </ul>
 </body>
 <footer>
-
+    <p>Last Updated: </p>
     <script src="last-edited.js"></script>
 </footer>
 </html>
