--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 </body>
 <footer>
     <p>Last Updated: </p>
-    <script src="last-edited.js"></script>
+    <script src="js/last-edited.js"></script>
 </footer>
 </html>
