--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Oscar Peterson">
     <meta name="description" content="This is the WDD230 Assignment Portal for Oscar Peterson.">
     <title>Assignment Portal</title>
-    <link rel="stylesheet" href="https://github.com/OscaPete/wdd230/blob/main/css/styles.css" media="screen">
+    <link rel="stylesheet" href="css/styles.css" media="screen">
 </head>
 <header>
     <img src="https://github.com/OscaPete/wdd230/blob/main/images/mepic.jpg?raw=true" alt="picture of me" class="portal-header-img">
