linked the normalize css file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Oscar Peterson">
     <meta name="description" content="This is the WDD230 Assignment Portal for Oscar Peterson.">
     <title>Assignment Portal</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css" media="screen">
 </head>
 <header>
