--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="This is the WDD230 Assignment Portal for Oscar Peterson.">
     <title>Assignment Portal</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/styles.css" media="screen">
 </head>
 <header>
