--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="This is the WDD230 Assignment Portal for Oscar Peterson.">
     <title>Assignment Portal</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/styles.css" media="screen">
+    <link rel="stylesheet" href="css/medium.css" media="screen">
 </head>
 <header>
     <img src="https://github.com/OscaPete/wdd230/blob/main/images/mepic.jpg?raw=true" alt="picture of me" class="portal-header-img">
