added link to ranch page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <h1 class="portal-headline">WDD230: Assignment Portal</h1>
     <ul class="portal-list">
-        <li>This will be updated as assignments are added.</li>
+        <li><a href="ranch-start/index.html">Christmas Ranch</a></li>
     </ul>
 </body>
 <footer>
