linked lesson2 folder

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h1 class="portal-headline">WDD230: Assignment Portal</h1>
         <ul class="portal-list">
             <li><a href="ranch-start/index.html">Christmas Ranch</a></li>
+            <li><a href="lesson2/design-principles.html">Design Principles</a></li>
         </ul>
     </body>
     <footer>
