--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -25,7 +25,7 @@
         <div class="contrast">
             <h2>Contrast</h2>
             <p>UDOT</p>
-            <a href="udot.utah.gov">udot.utah.gov</a>
+            <a href="https://www.udot.utah.gov/connect/">udot.utah.gov</a>
             <img src="images/udot.jpg" alt="udot home screenshot">
             <p>the UDOT home page has an immediate display of contrast. The background is dark, due to being a set of roads, 
                 but sitting in the front is a white search bar, accompanied by orange, yellow, and blue, all in a bright, almost pastel shade. 
@@ -36,7 +36,7 @@
         <div class="visual-hierarchy">
             <h2>Visual Hierarchy</h2>
             <p>Pokemon</p>
-            <a href="pokemon.com">pokemon.com</a>
+            <a href="https://www.pokemon.com/us/">pokemon.com</a>
             <img src="images/pokemon.jpg" alt="pokemon home screenshot">
             <p>When you open this page, you are met with a large, purple block with information on it. It almost looks like 
                it's the only thing there, but it becomes obvious pretty quickly that that's not the case. This is visual hierarchy 
@@ -47,7 +47,7 @@
         <div class="rule-thirds">
             <h2>Rule of Thirds</h2>
             <p>BoxLunch</p>
-            <a href="boxlunch.com">boxlunch.com</a>
+            <a href="https://www.boxlunch.com/homepage">boxlunch.com</a>
             <img src="images/boxlunch.jpg" alt="boxlunch home screenshot">
             <p>This example of the rule of thirds on BoxLunch's home page lies a short ways down the page, but it is there 
                 nonetheless. Both at the top and bottom of the screenshot, you can see sets of three in a row, causing most to 
@@ -62,3 +62,4 @@
         <p class="copyright"></p>
     </footer>
     <script src="js/last-edited.js"></script>
+    
