--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -12,54 +12,57 @@
         <link rel="stylesheet" href="css/medium.css" media="screen">
         <link rel="stylesheet" href="css/large.css" media="screen">
     </head>
+    <div class="content">
+        <header>
+            <h1>Design Principles</h1>
+        </header>
 
-    <header>
-        <h1>Design Principles</h1>
-    </header>
+        <main>
+            <!--udot.utah.gov contrast
+            pokemon.com visual hierarchy
+            boxlunch.com rule of thirds-->
 
-    <body>
-        <!--udot.utah.gov contrast
-        pokemon.com visual hierarchy
-        boxlunch.com rule of thirds-->
+            <div class="contrast">
+                <h2>Contrast</h2>
+                <p>UDOT</p>
+                <a href="https://www.udot.utah.gov/connect/">udot.utah.gov</a>
+                <img src="images/udot.jpg" alt="udot home screenshot">
+                <p>the UDOT home page has an immediate display of contrast. The background is dark, due to being a set of roads, 
+                    but sitting in the front is a white search bar, accompanied by orange, yellow, and blue, all in a bright, almost pastel shade. 
+                    This brightness on top of the dark backing is impossible to pass off as not contrast.
+                </p>
+            </div>
 
-        <div class="contrast">
-            <h2>Contrast</h2>
-            <p>UDOT</p>
-            <a href="https://www.udot.utah.gov/connect/">udot.utah.gov</a>
-            <img src="images/udot.jpg" alt="udot home screenshot">
-            <p>the UDOT home page has an immediate display of contrast. The background is dark, due to being a set of roads, 
-                but sitting in the front is a white search bar, accompanied by orange, yellow, and blue, all in a bright, almost pastel shade. 
-                This brightness on top of the dark backing is impossible to pass off as not contrast.
-            </p>
-        </div>
+            <div class="visual-hierarchy">
+                <h2>Visual Hierarchy</h2>
+                <p>Pokemon</p>
+                <a href="https://www.pokemon.com/us/">pokemon.com</a>
+                <img src="images/pokemon.jpg" alt="pokemon home screenshot">
+                <p>When you open this page, you are met with a large, purple block with information on it. It almost looks like 
+                it's the only thing there, but it becomes obvious pretty quickly that that's not the case. This is visual hierarchy 
+                at work, where something that is large and has a good amount of contrast to everything else grabs your attention first. 
+                </p>
+            </div>
 
-        <div class="visual-hierarchy">
-            <h2>Visual Hierarchy</h2>
-            <p>Pokemon</p>
-            <a href="https://www.pokemon.com/us/">pokemon.com</a>
-            <img src="images/pokemon.jpg" alt="pokemon home screenshot">
-            <p>When you open this page, you are met with a large, purple block with information on it. It almost looks like 
-               it's the only thing there, but it becomes obvious pretty quickly that that's not the case. This is visual hierarchy 
-               at work, where something that is large and has a good amount of contrast to everything else grabs your attention first. 
-            </p>
-        </div>
+            <div class="rule-thirds">
+                <h2>Rule of Thirds</h2>
+                <p>BoxLunch</p>
+                <a href="https://www.boxlunch.com/homepage">boxlunch.com</a>
+                <img src="images/boxlunch.jpg" alt="boxlunch home screenshot">
+                <p>This example of the rule of thirds on BoxLunch's home page lies a short ways down the page, but it is there 
+                    nonetheless. Both at the top and bottom of the screenshot, you can see sets of three in a row, causing most to 
+                    mentally envision three columns, one for each item. You have the "Shop Safe" icons at the bottom, which all have 
+                    nice consistency too, and at the top we see three different covers for airpod cases.
+                </p>
+            </div>
 
-        <div class="rule-thirds">
-            <h2>Rule of Thirds</h2>
-            <p>BoxLunch</p>
-            <a href="https://www.boxlunch.com/homepage">boxlunch.com</a>
-            <img src="images/boxlunch.jpg" alt="boxlunch home screenshot">
-            <p>This example of the rule of thirds on BoxLunch's home page lies a short ways down the page, but it is there 
-                nonetheless. Both at the top and bottom of the screenshot, you can see sets of three in a row, causing most to 
-                mentally envision three columns, one for each item. You have the "Shop Safe" icons at the bottom, which all have 
-                nice consistency too, and at the top we see three different covers for airpod cases.
-            </p>
-        </div>
+        </main>
 
-    </body>
+        <footer>
+            <p class="copyright"></p>
+        </footer>
+        <script src="js/last-edited.js"></script>
 
-    <footer>
-        <p class="copyright"></p>
-    </footer>
-    <script src="js/last-edited.js"></script>
-    
+    </div>
+
+</html>
