--- a/water_cycle/index.html
+++ b/water_cycle/index.html
@@ -28,8 +28,8 @@
 </head>
 <body>
 <!-- HEADER HERE -->
-	<header>
-	
+	<header class= "clearfix">
+	<img src= "images/logo.png" alt= "logo">
  <h1>Company Name Here</h1>
         <h2>Possible Slogan or Tagline</h2>
     </header>
