--- a/water_cycle/index.html
+++ b/water_cycle/index.html
@@ -58,7 +58,7 @@
     
 <!-- FOOTER HERE -->   
     <footer>
-        &copy; 201x &bull; Paul Cheney &bull; 123-555-6789
+        &copy; 2022 &bull; Oscar Peterson &bull; 123-555-6789
     </footer>
 
 </body>
