--- a/water_cycle/precipitation.html
+++ b/water_cycle/precipitation.html
@@ -6,7 +6,7 @@
 <meta name="author" content="John Doe">
 
 <!-- This start file was build by Paul Cheney  -->
-<title>Evaporation: Water Cycle</title>
+<title>Precipitation: Water Cycle</title>
 
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -38,9 +38,9 @@
 <!-- NAVIGATION HERE -->
     <nav class="clearfix">
         <ul >
-            <li class="active"><a href="index.html">Evaporation</a></li>
+            <li><a href="index.html">Evaporation</a></li>
             <li><a href="condensation.html">Condensation</a></li>
-            <li><a href="precipitation.html">Precipitation</a></li>
+            <li class="active"><a href="precipitation.html">Precipitation</a></li>
             <li><a href="collections.html">Collections</a></li>    
         </ul>
     </nav>
@@ -48,7 +48,7 @@
     
 <!-- CONTENT HERE -->
     <main>
-        <h1>Evaporation</h1>
+        <h1>Precipitation</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
@@ -58,7 +58,7 @@
     
 <!-- FOOTER HERE -->   
     <footer>
-        &copy; 201x &bull; Paul Cheney &bull; 123-555-6789
+        &copy; 2022 &bull; Oscar Peterson &bull; 123-555-6789
     </footer>
 
 </body>
