linked water cycle page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <ul class="portal-list">
             <li><a href="ranch-start/index.html">Christmas Ranch</a></li>
             <li><a href="lesson2/design-principles.html">Design Principles</a></li>
+            <li><a href="water_cycle">Water Cycle</a></li>
         </ul>
     </body>
     <footer>
