--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width-device-width, initial-scale-1.0">
         <meta name="author" content="Oscar Peterson">
-        <meta name="description" content="This is the WDD230 Assignment Portal for Oscar Peterson.">
-        <title>Assignment Portal</title>
+        <meta name="description" content="A page detailing design principles of three different sites.">
+        <title>Design Principles</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/small.css" media="screen">
         <link rel="stylesheet" href="css/medium.css" media="screen">
