--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width-device-width, initial-scale-1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="author" content="Oscar Peterson">
         <meta name="description" content="Site plan for a Chamber of Commerce site.">
         <title>Site Plan-Home</title>
@@ -12,16 +12,47 @@
         <link rel="stylesheet" href="css/medium.css" media="screen">
         <link rel="stylesheet" href="css/large.css" media="screen">
     </head>
+    <body>
+        <header>
+            <h1>Jubilife City Chamber of Commerce</h1>
+            <h2>The City of Joy</h2>
+          </header>
+            
+          <nav>
+          <ul>
+            <li class="active"><a href="index.html">Site Foundation</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
+          </ul>
+          </nav>
 
-    <main>
+        <main>
+            <h1>Site Foundation</h1>
+        
+            <figure>
+            <img src="#" alt="logo">
+            </figure>
+            <figcaption>Site Name and Domain</figcaption>
+            <p>Jubilife City Chamber of Commerce</p>
+            <p>joychamber.com</p>
+
+            <div class="purpose">
+            <p>Appropriately deliver resource-leveling infrastructures via one-to-one architectures. Progressively expedite B2B process improvements with plug-and-play applications. Conveniently simplify robust channels via ubiquitous intellectual capital. Monotonectally implement client-centric supply chains without customer directed opportunities. Enthusiastically re-engineer cross functional markets whereas sticky products.</p>
+
+            <p>Conveniently repurpose multifunctional imperatives before corporate technology. Holisticly orchestrate cross functional portals vis-a-vis fully tested imperatives. Dynamically transform low-risk high-yield leadership and long-term high-impact systems. Dramatically build resource sucking internal or "organic" sources before high standards in action items. Appropriately develop proactive vortals through extensible e-services.</p>
+
+            <p>Energistically exploit effective solutions with fully researched data. Completely leverage existing standardized ROI through collaborative content. Compellingly supply fully researched ideas rather than real-time process improvements. Efficiently envisioneer proactive ideas after B2B materials. Proactively scale cross-media platforms vis-a-vis e-business manufactured products.</p>
+
+            <p>Proactively pursue go forward ideas vis-a-vis impactful quality vectors. Monotonectally predominate cross-unit web services without front-end action items. Enthusiastically disintermediate e-business testing procedures after granular deliverables. Objectively productivate premium users before revolutionary partnerships. Collaboratively aggregate best-of-breed systems without installed base leadership skills.</p>
+            </div>
 
 
+        </main>
 
-    </main>
-
-    <footer>
-        <p class="copyright"></p>
-    </footer>
-    <script src="js/last-edited.js"></script>
-
+        <footer>
+            <p class="copyright"></p>
+        </footer>
+        <script src="js/last-edited.js"></script>
+    </body>
 </html>
