--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -12,16 +12,34 @@
         <link rel="stylesheet" href="css/medium.css" media="screen">
         <link rel="stylesheet" href="css/large.css" media="screen">
     </head>
+    <body>
+        <header>
+            <h1>Jubilife City Chamber of Commerce</h1>
+            <h2>The City of Joy</h2>
+        </header>
+            
+        <nav>
+        <ul>
+            <li><a href="index.html">Site Foundation</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li class="active"><a href="color-scheme.html">Color Scheme</a></li>
+            <li><a href="typography.html">Typography</a></li>
+        </ul>
+        </nav>
+        <main>
+            <h2>
+                Colors and Source
+            </h2>
+            <p><a href="https://coolors.co/dbcfb0-bfc8ad-90b494-718f94-545775">Palette Source</a></p>
+            <p class="primary-color">Primary Color: #545775 Independence</p>
+            <p class="secondary-color">Secondary Color: #BFC8AD Laurel Green</p>
 
-    <main>
+        </main>
 
-
-
-    </main>
-
-    <footer>
-        <p class="copyright"></p>
-    </footer>
-    <script src="js/last-edited.js"></script>
+        <footer>
+            <p class="copyright"></p>
+        </footer>
+        <script src="js/last-edited.js"></script>
+    </body>
 
 </html>
