--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -12,16 +12,30 @@
         <link rel="stylesheet" href="css/medium.css" media="screen">
         <link rel="stylesheet" href="css/large.css" media="screen">
     </head>
+    <body>
+        <header>
+            <h1>Jubilife City Chamber of Commerce</h1>
+            <h2>The City of Joy</h2>
+        </header>
+            
+        <nav>
+        <ul>
+            <li><a href="index.html">Site Foundation</a></li>
+            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a href="color-scheme.html">Color Scheme</a></li>
+            <li class="active"><a href="typography.html">Typography</a></li>
+        </ul>
+        </nav>
+        <main>
 
-    <main>
 
 
+        </main>
 
-    </main>
-
-    <footer>
-        <p class="copyright"></p>
-    </footer>
-    <script src="js/last-edited.js"></script>
+        <footer>
+            <p class="copyright"></p>
+        </footer>
+        <script src="js/last-edited.js"></script>
+    </body>
 
 </html>
