--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -27,7 +27,7 @@
         </ul>
         </nav>
         <main>
-
+            <p>This site uses the "Dongle" font, at a weight of 300.</p>
 
 
         </main>
