--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -38,13 +38,11 @@
             <p>joychamber.com</p>
 
             <div class="purpose">
-            <p>Appropriately deliver resource-leveling infrastructures via one-to-one architectures. Progressively expedite B2B process improvements with plug-and-play applications. Conveniently simplify robust channels via ubiquitous intellectual capital. Monotonectally implement client-centric supply chains without customer directed opportunities. Enthusiastically re-engineer cross functional markets whereas sticky products.</p>
-
-            <p>Conveniently repurpose multifunctional imperatives before corporate technology. Holisticly orchestrate cross functional portals vis-a-vis fully tested imperatives. Dynamically transform low-risk high-yield leadership and long-term high-impact systems. Dramatically build resource sucking internal or "organic" sources before high standards in action items. Appropriately develop proactive vortals through extensible e-services.</p>
-
-            <p>Energistically exploit effective solutions with fully researched data. Completely leverage existing standardized ROI through collaborative content. Compellingly supply fully researched ideas rather than real-time process improvements. Efficiently envisioneer proactive ideas after B2B materials. Proactively scale cross-media platforms vis-a-vis e-business manufactured products.</p>
-
-            <p>Proactively pursue go forward ideas vis-a-vis impactful quality vectors. Monotonectally predominate cross-unit web services without front-end action items. Enthusiastically disintermediate e-business testing procedures after granular deliverables. Objectively productivate premium users before revolutionary partnerships. Collaboratively aggregate best-of-breed systems without installed base leadership skills.</p>
+            <p>The purpose of this site is to promote the economical growth of Jubilife City. The site will provide 
+                invitation to engage in business in the area, and encourage people to cooperate with the Chamber of Commerce 
+                to further develop the city. The hope is to accomodate the growing population with enough services that businesses 
+                do not become regularly crowded.
+            </p>
             </div>
 
 
