added and linked logo

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -31,7 +31,7 @@
             <h1>Site Foundation</h1>
         
             <figure>
-            <img src="#" alt="logo">
+            <img src="images/jubilifelogo.png" alt="logo">
             </figure>
             <figcaption>Site Name and Domain</figcaption>
             <p>Jubilife City Chamber of Commerce</p>
