added purpose content

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -43,6 +43,10 @@
                 to further develop the city. The hope is to accomodate the growing population with enough services that businesses 
                 do not become regularly crowded.
             </p>
+            <p>As businesses are installed and grow, this site will serve as a central point of info for who to contact 
+                when help is needed, what kinds of requirements need to be met to install a business, and more. It will also 
+                serve as a community hub for important discussions and offer ways to join the chamber.
+            </p>
             </div>
 
 
