added audience content

--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -27,8 +27,32 @@
         </ul>
         </nav>
         <main>
+            <div class="target">
+                <h2>Target Audience</h2>
+                <p>Who: Business owners and aspiring business owners.</p>
+                <p>Age: 21 and up.</p>
+                <p>Motivation: Improve the quality of the local economy.</p>
+            </div>
 
-
+            <div class="persona1">
+                <h2>Steven Stone</h2>
+                <p>Occupation: CEO of Devon Corporation</p>
+                <p>Demographic and Education: 25 years old. Masters level education in business administration.</p>
+                <p>Goals and motivation for using this site: Partner with the Chamber to help advance the growth 
+                    of the area.
+                </p>
+                <p>Social: Highly enjoys geology, spends much of his free time at museums and exploring caves. 
+                    Also enjoys visits with his father.
+                </p>
+                <p>Technology: Uses exclusively Apple, and for most of his office work uses a desktop Mac. At home 
+                    he uses the latest MacBook, and has the latest iPhone as well.
+                </p>
+                <p>Quote: "There's an entrepreneur right now, scared to death, making excuses, 
+                    saying, 'it's not the right time just yet.' There's no such thing as a good time."</p>
+            </div>
+            <div class="persona2">
+                
+            </div>
 
         </main>
 
