finished target audience

--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -51,6 +51,25 @@
                     saying, 'it's not the right time just yet.' There's no such thing as a good time."</p>
             </div>
             <div class="persona2">
+                <h2>Viola Phobu</h2>
+                <p>Occupation: Photographer</p>
+                <p>Demographic and Education: 22 years old. Self-taught photographer, runs her own photography business.</p>
+                <p>Goals and motivation for using this site: Look for help in putting her business out there in the area.</p>
+                <p>Social: Enjoys traveling with her sister, who uses her photos in her news articles. Fond of bugs.</p>
+                <p>Technology: Uses Canon cameras, and when she doesn't have her camera she uses a Nokia Lumia because it's 
+                    a capable camera substitute.
+                </p>
+                <p>Quote: "They call us dreamers, but we're the ones who don't sleep."</p>
+            </div>
+
+            <div class="scenarios">
+                <ul>
+                    <li>Who is in my local Chamber of Commerce?</li>
+                    <li>How can I improve my business?</li>
+                    <li>How can I help boost the local economy?</li>
+                    <li>Where do I stay up to date on local events that can affect my business?</li>
+                    <li>How can my company be a part of a larger group?</li>
+                </ul>
                 
             </div>
 
