minor text edit

--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -63,6 +63,7 @@
             </div>
 
             <div class="scenarios">
+                <h2>Scenarios</h2>
                 <ul>
                     <li>Who is in my local Chamber of Commerce?</li>
                     <li>How can I improve my business?</li>
