text change and linked site plan

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="ranch-start/index.html">Christmas Ranch</a></li>
             <li><a href="lesson2/design-principles.html">Design Principles</a></li>
             <li><a href="water_cycle">Water Cycle</a></li>
+            <li><a href="lesson3">Chamber of Commerce Site Plan</a></li>
         </ul>
         <footer>
             <p class="copyright"></p>
