--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -31,7 +31,7 @@
                 <h2>Target Audience</h2>
                 <p>Who: Business owners and aspiring business owners.</p>
                 <p>Age: 21 and up.</p>
-                <p>Motivation: Improve the quality of the local economy.</p>
+                <p>Motivation: Improve the quality of the local economy or their own business. Overall involvement in the community.</p>
             </div>
 
             <div class="persona1">
