--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -33,7 +33,7 @@
             <figure>
             <img src="images/jubilifelogo.png" alt="logo">
             </figure>
-            <figcaption>Site Name and Domain</figcaption>
+            <h2>Site Name and Domain</h2>
             <p>Jubilife City Chamber of Commerce</p>
             <p>joychamber.com</p>
 
