linked chamber of commerce site

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="lesson2/design-principles.html">Design Principles</a></li>
             <li><a href="water_cycle">Water Cycle</a></li>
             <li><a href="lesson3">Chamber of Commerce Site Plan</a></li>
+            <li><a href="chamber">Chamber of Commerce Site</a></li>
         </ul>
         <footer>
             <p class="copyright"></p>
