--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <div class="header-content">
-        <img src="" alt="jubilife logo" />
+        <img src="images/jubilifelogo.png" alt="jubilife logo" />
         <h1>Jubilife City Chamber of Commerce</h1>
         <h2>The City of Joy</h2>
         <h2 class="date"><span id="currentDate"></span></h2>
@@ -138,7 +138,7 @@
     <footer>
       <div class="footer-content-1">
         <div class="footer-logo-side">
-          <img src="" alt="jubilife logo" />
+          <img src="images/jubilifelogo.png" alt="jubilife logo" />
           <p>Jubilife City Chamber of Commerce<br />Sinnoh</p>
         </div>
       </div>
