minor text change

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -144,7 +144,7 @@
       </div>
       <p>
         &copy; <span id="currentYear"></span> Jubilife City Chamber of Commerce | Oscar
-        Peterson | WDD 230 project | Last Modification:
+        Peterson | WDD 230 | Last Modification:
         <span id="lastModif"></span>
       </p>
     </footer>
