linked week 6 presentation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="water_cycle">Water Cycle</a></li>
             <li><a href="lesson3">Chamber of Commerce Site Plan</a></li>
             <li><a href="chamber">Chamber of Commerce Site</a></li>
+            <li><a href="student-presentation">Week 6 Presentation</a></li>
         </ul>
         <footer>
             <p class="copyright"></p>
