changed video size

--- a/student-presentation/index.html
+++ b/student-presentation/index.html
@@ -17,7 +17,7 @@
             <h1 class="portal-header-name">Oscar Peterson</h1>
         </header>
         <h1 class="portal-headline">Week 6 Presentation</h1>
-        <video controls><source src="videos/jpgpngpresentation.mp4" type="video/mp4"></video>
+        <video width="320" height="240" controls><source src="videos/jpgpngpresentation.mp4" type="video/mp4"></video>
         <footer>
             <p class="copyright"></p>
         </footer>
