--- a/chamber/index.html
+++ b/chamber/index.html
@@ -139,7 +139,10 @@
       <div class="footer-content-1">
         <div class="footer-logo-side">
           <img src="images/jubilifelogo.png" alt="jubilife logo" />
-          <p>Jubilife City Chamber of Commerce<br />Sinnoh</p>
+          <p>Jubilife City Chamber of Commerce<br />Sinnoh<br /><a href="#">Map</a></p>
+        </div>
+        <div class="footer-contact-side">
+          <p>thisisafakeemail@gmail.com<br />(123) 456-7890</p>
         </div>
       </div>
       <p>
