--- a/chamber/index.html
+++ b/chamber/index.html
@@ -139,7 +139,7 @@
       <div class="footer-content-1">
         <div class="footer-logo-side">
           <img src="images/jubilifelogo.png" alt="jubilife logo" />
-          <p>Jubilife City Chamber of Commerce<br />Sinnoh<br /><a href="#">Map</a></p>
+          <p>Jubilife City Chamber of Commerce<br />Sinnoh<br /><a href="https://www.google.com/maps/place/Sapporo,+Hokkaido,+Japan/@42.9849927,140.9670983,10z/data=!3m1!4b1!4m13!1m7!3m6!1s0x5f9f59209f6c888b:0x1c3cc3564fce038f!2sHokkaido,+Japan!3b1!8m2!3d43.2203266!4d142.8634737!3m4!1s0x5f0ad4755a973633:0x33937e9d4687bad5!8m2!3d43.0618647!4d141.3545609">Map</a></p>
         </div>
         <div class="footer-contact-side">
           <p>thisisafakeemail@gmail.com<br />(123) 456-7890</p>
