added windchill and weather

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -71,11 +71,11 @@
         </section>
 
         <section class="colored home-weather">
-          <h2>Weather</h2>
-          <p>
-            Dolor sit amet, consectetur adipisicing elit. Dolore ipsum esse
-            quaerat eveniet minus enim magni, consectetur officia eum deleniti.
-          </p>
+            <h2>Weather</h2>
+            <p>Cloudy today, <span id="degrees">30</span> °F <br>
+            </p>
+            <p>Wind Speed: <span id="wind-speed">3.5</span>km/h</p>
+            <p><span id="wind-chill"></span></p>
         </section>
 
         <section class="home-news">
@@ -152,5 +152,6 @@
       </p>
     </footer>
     <script src="js/chamberScript.js"></script>
+    <script src="js/windchill.js"></script>
   </body>
 </html>
