added hero image

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,24 +41,14 @@
     <main>
       <h1>Home</h1>
       <article>
-        <section class="home-hero">
-          <h2>Hero with site name and call to action</h2>
-          <p>
-            Consectetur adipisicing elit. Illo, quisquam aliquam architecto
-            sapiente quidem nisi consectetur esse commodi libero, quibusdam,
-            iusto fugit ipsa. Quisquam nostrum dolores repellendus error. Eum,
-            placeat! Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Beatae ab ex atque vel numquam optio exercitationem temporibus ea
-            magnam unde iure, nemo nobis dolorem incidunt earum saepe dolorum ut
-            asperiores? Consectetur adipisicing elit. Illo, quisquam aliquam
-            architecto sapiente quidem nisi consectetur esse commodi libero,
-            quibusdam, iusto fugit ipsa. Quisquam nostrum dolores repellendus
-            error. Eum, placeat! Lorem ipsum, dolor sit amet consectetur
-            adipisicing elit. Beatae ab ex atque vel numquam optio
-            exercitationem temporibus ea magnam unde iure, nemo nobis dolorem
-            incidunt earum saepe dolorum ut asperiores?
-          </p>
-        </section>
+        <div class="hero">
+          <section class="hero-content">
+              <h2>Welcome to the Jubilife Chamber of Commerce</h2>
+              <p>We help the community and assist everyone on their journey to success.</p>
+              <button class="btn"
+              onclick="window.location.href='join.html';">Join Now!</button>
+          </section>
+      </div>
 
         <section class="home-events">
           <h2>Events</h2>
