added page content

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,10 +53,9 @@
         <section class="home-events">
           <h2>Events</h2>
           <p>
-            Consectetur adipisicing elit. Illo, quisquam aliquam architecto
-            sapiente quidem nisi consectetur esse commodi libero, quibusdam,
-            iusto fugit ipsa. Quisquam nostrum dolores repellendus error. Eum,
-            placeat! Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            The Poketch Company is having a watch giveaway! For the next week,
+            search the city for all three of their clowns, take their fun quizzes,
+            and turn in the tickets you receive for your free watch!
           </p>
         </section>
 
@@ -71,55 +70,43 @@
         <section class="home-news">
           <h2>News release</h2>
           <p>
-            Adipisicing elit. Quae voluptatum odio, assumenda corporis
-            recusandae vero numquam, iusto eius a quia sit autem aspernatur id,
-            maiores nam porro blanditiis distinctio quibusdam! Lorem ipsum dolor
-            sit amet, consectetur adipisicing elit. Eligendi dolor a officia
-            similique ipsum porro! Labore reprehenderit quod non dolores quam?
-            Alias possimus laborum distinctio id at minus molestias dignissimos.
+            There have been reports of a suspicious group wearing odd clothes and sporting bowl cuts.
+            Reports claim potential theft and vandalism. Learn more <a href="">here</a>. 
           </p>
         </section>
 
         <section class="home-join">
           <h2>Join</h2>
           <p>
-            Nihil ipsum dolor sit amet consectetur, adipisicing elit. Nostrum
-            nisi modi molestias. Nihil tempora optio accusantium rem doloribus
-            deleniti assumenda! Quidem nihil sunt ipsa temporibus quis eveniet
-            esse dolorem placeat. Lorem ipsum, dolor sit amet consectetur
-            adipisicing elit.
+            Want to join the Chamber? Or maybe you just want to sign up for the newsletter? We've
+            got you covered. Click <a href="">here</a> for all of your joining options regarding
+            this wonderful city.
           </p>
         </section>
 
         <section class="colored home-spotlight-1">
           <h2>Spotlight 1</h2>
           <p>
-            Placeat ipsum dolor, sit amet consectetur adipisicing elit. Cum, at
-            in sit tenetur earum perferendis eius dolorum nisi deleniti,
-            deserunt illum voluptatem ut non fugit nostrum eos id accusamus
-            labore! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Sinnoh's very own Champion Cynthia is visiting Jubilife! Get a chance to meet
+            her by visiting the TV station later this week.
           </p>
         </section>
 
         <section class="colored home-spotlight-2">
           <h2>Spotlight 2</h2>
           <p>
-            Aspernatur, dolor sit amet consectetur adipisicing elit. Quos magnam
-            ipsa voluptas pariatur obcaecati aliquam, mollitia in, nemo odio
-            eligendi sint sapiente tempore repellendus minus sed, doloribus iure
-            officiis molestias. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit.
+            Outbreak! People visiting Route 204 have seen large outbreaks of a local bug,
+            don't miss your chance to catch a few! Researchers believe this outbreak won't
+            last long, so be quick!
           </p>
         </section>
 
         <section class="colored home-spotlight-3">
           <h2>Spotlight 3</h2>
           <p>
-            Consectetur, dolor sit amet consectetur adipisicing elit. Quos
-            magnam ipsa voluptas pariatur obcaecati aliquam, mollitia in, nemo
-            odio eligendi sint sapiente tempore repellendus minus sed, doloribus
-            iure officiis molestias. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit.
+            The Mart has recently lowered some of their prices! Certain items that were expensive
+            before have become more affordable than ever, and are now available to a wider range
+            of customers.
           </p>
         </section>
       </article>
