--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,6 +36,12 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
+
+      <div class="banner">
+        <h2>
+          Come join us for the Chamber meet and greet at 7PM on Wednesday!
+        </h2>
+      </div>
     </header>
 
     <main>
