--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,8 +30,8 @@
       <nav>
         <button id="menuButton"><span>&#9776;</span><span>X</span></button>
         <ul id="mainNav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Directory</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="discover.html">Discover</a></li>
           <li><a href="#">Join</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
