--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -65,6 +65,6 @@
         <span id="lastModif"></span>
       </p>
     </footer>
-
+    <script src="js/chamberScript.js"></script>
   </body>
 </html>
