--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -47,6 +47,14 @@
     <main>
       <h1>Discover</h1>
       
+      <div class="discover-grid">
+        <div>
+            <img src="images/placeholder.png" data-src="images/jubilife-citylimits-north.jpeg" alt="North City Limits">
+        </div>
+
+
+
+      </div>
     </main>
 
     <footer>
