--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -74,5 +74,6 @@
       </p>
     </footer>
     <script src="js/chamberScript.js"></script>
+    <script src="js/lazyload.js"></script>
   </body>
 </html>
