linked images to discover page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -51,9 +51,30 @@
         <div>
             <img src="images/placeholder.png" data-src="images/jubilife-citylimits-north.jpeg" alt="North City Limits">
         </div>
-
-
-
+        <div>
+            <img src="images/placeholder.png" data-src="images/jubilife-citylimits.jpeg" alt="South City Limits">
+        </div>
+        <div>
+            <img src="images/placeholder.png" data-src="images/jubilife-citysouth.webp" alt="South City">
+        </div>
+        <div>
+            <img src="images/placeholder.png" data-src="images/jubilife-crossroads.jpeg" alt="Crossroads">
+        </div>
+        <div>
+            <img src="images/placeholder.png" data-src="images/jubilife-mart.jpeg" alt="Mart">
+        </div>
+        <div>
+            <img src="images/placeholder.png" data-src="images/jubilife-poketchco.jpeg" alt="Poketch Company">
+        </div>
+        <div>
+            <img src="images/placeholder.png" data-src="images/jubilife-trainerschool.jpeg" alt="Trainer's School">
+        </div>
+        <div>
+            <img src="images/placeholder.png" data-src="images/jubilife-tvstation-inner.jpeg" alt="Inside TV Station">
+        </div>
+        <div>
+            <img src="images/placeholder.png" data-src="images/jubilife-tvstation.webp" alt="TV Station">
+        </div>
       </div>
     </main>
 
