added discover page summary

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -46,6 +46,26 @@
 
     <main>
       <h1>Discover</h1>
+
+      <div class="discover-description">
+          <h2>
+              Jubilife City- A Brief Summary
+          </h2>
+
+          <p>Jubilife City is one of the largest cities in the entire Sinnoh Region, and holds the epithet 
+              "The City of Joy". The city is located on the West side of the region, which is divided by the 
+              mighty Mt. Coronet, and sits between Floaroma Town to the North and Sandgem Town to the South.
+          </p>
+          <p>Jubilife is home to many wonderful services, including but not limited to the Trainer's School, 
+              the Jubilife TV Station, and the Poketch Company. Many of these services accomodate the entirety of 
+              Sinnoh, making Jubilife a hotspot for tourists due to the exclusive nature of these locations. 
+              Why not try visiting some of these spots yourself?
+          </p>
+          <p>In its past, Jubilife City was once called Jubilife Village, and was the original major settlement 
+              of Sinnoh. Its inhabitants worked hard on documenting the wildlife of the region so that our present 
+              day residents could rest easy, knowing all they need to know about the wildlife.
+          </p>
+      </div>
       
       <div class="discover-grid">
         <div>
