added image captions to discover page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -70,30 +70,39 @@
       <div class="discover-grid">
         <div>
             <img src="images/placeholder.png" data-src="images/jubilife-citylimits-north.jpeg" alt="North City Limits">
+            <p>North City Limits</p>
         </div>
         <div>
             <img src="images/placeholder.png" data-src="images/jubilife-citylimits.jpeg" alt="South City Limits">
+            <p>South City Limits</p>
         </div>
         <div>
             <img src="images/placeholder.png" data-src="images/jubilife-citysouth.webp" alt="South City">
+            <p>South City</p>
         </div>
         <div>
             <img src="images/placeholder.png" data-src="images/jubilife-crossroads.jpeg" alt="Crossroads">
+            <p>Crossroads</p>
         </div>
         <div>
             <img src="images/placeholder.png" data-src="images/jubilife-mart.jpeg" alt="Mart">
+            <p>Mart</p>
         </div>
         <div>
             <img src="images/placeholder.png" data-src="images/jubilife-poketchco.jpeg" alt="Poketch Company">
+            <p>Poketch Company</p>
         </div>
         <div>
             <img src="images/placeholder.png" data-src="images/jubilife-trainerschool.jpeg" alt="Trainer's School">
+            <p>Trainer's School</p>
         </div>
         <div>
             <img src="images/placeholder.png" data-src="images/jubilife-tvstation-inner.jpeg" alt="Inside TV Station">
+            <p>Inside the TV Station</p>
         </div>
         <div>
             <img src="images/placeholder.png" data-src="images/jubilife-tvstation.webp" alt="TV Station">
+            <p>TV Station</p>
         </div>
       </div>
     </main>
