linked more assignments

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <li><a href="lesson3">Chamber of Commerce Site Plan</a></li>
             <li><a href="chamber">Chamber of Commerce Site</a></li>
             <li><a href="student-presentation">Week 6 Presentation</a></li>
+            <li><a href="chamber">Chamber Responsive Design</a></li>
+            <li><a href="chamber/discover.html">Chamber Discover Page</a></li>
         </ul>
         <footer>
             <p class="copyright"></p>
