--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <div class="header-content">
-        <img src="images/jubilifelogo.png" alt="jubilife logo" />
+        <img src="images/jubilifelogo.webp" alt="jubilife logo" />
         <h1>Jubilife City Chamber of Commerce</h1>
         <h2>The City of Joy</h2>
         <h2 class="date"><span id="currentDate"></span></h2>
@@ -121,7 +121,7 @@
     <footer>
       <div class="footer-content-1">
         <div class="footer-logo-side">
-          <img src="images/jubilifelogo.png" alt="jubilife logo" />
+          <img src="images/jubilifelogo.webp" alt="jubilife logo" />
           <p>Jubilife City Chamber of Commerce<br />Sinnoh<br /><a href="https://www.google.com/maps/place/Sapporo,+Hokkaido,+Japan/@42.9849927,140.9670983,10z/data=!3m1!4b1!4m13!1m7!3m6!1s0x5f9f59209f6c888b:0x1c3cc3564fce038f!2sHokkaido,+Japan!3b1!8m2!3d43.2203266!4d142.8634737!3m4!1s0x5f0ad4755a973633:0x33937e9d4687bad5!8m2!3d43.0618647!4d141.3545609">Map</a></p>
         </div>
         <div class="footer-contact-side">
