added last visit function

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -42,6 +42,7 @@
           Come join us for the Chamber meet and greet at 7PM on Wednesday!
         </h2>
       </div>
+      <span id="lastvisit"></span>
     </header>
 
     <main>
@@ -125,5 +126,6 @@
     </footer>
     <script src="js/chamberScript.js"></script>
     <script src="js/lazyload.js"></script>
+    <script src="js/lastVisit.js"></script>
   </body>
 </html>
