--- a/chamber/join.html
+++ b/chamber/join.html
@@ -47,7 +47,31 @@
     <main>
       <h1>Join</h1>
 
-      
+      <form method="get" action="thank-you.html">
+        <fieldset>
+          <label class="top">First Name* <input type="text" name="fname" required></label>
+          <label class="top">Last Name* <input type="text" required></label>
+          <label class="top">Business position (optional)<input type="text" title="Please type more than 7 characters without spaces to describe your job position." pattern="\S{7,}" name="businessP"></label>
+          <label class="top">Email* <input type="email" name="email" placeholder="example@company.com" required></label>
+          <label class="top">Cellphone Number* <input type="tel" required></label>
+          <label class="top">Business Name/Title*<input type="text" title="Please type more than 7 characters without spaces to describe your Business or Title." pattern="\S{7,}" name="businessP" required></label>
+
+          <div class="options-member">
+            <div>Membership type*</div>
+            <label class="sbs"><input type="radio" name="membership" value="platinum" required> Platinum</label>
+            <label class="sbs"><input type="radio" name="membership" value="gold"> Gold</label>
+            <label class="sbs"><input type="radio" name="membership" value="silver"> Silver</label>
+        </div>
+          <label class="top">Business Description*
+            <textarea name="businessdesc" rows="4" cols="30" required></textarea>
+          </label>
+          <input type="hidden" id="setCurrentTime" name="date" value="">
+          <input class="submitBtn" type="submit" value="Get Membership!">
+
+        </fieldset>
+
+
+      </form>
     </main>
 
     <footer>
