--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="student-presentation">Week 6 Presentation</a></li>
             <li><a href="chamber">Chamber Responsive Design</a></li>
             <li><a href="chamber/discover.html">Chamber Discover Page</a></li>
+            <li><a href="chamber/join.html">Chamber Join Page</a></li>
         </ul>
         <footer>
             <p class="copyright"></p>
