--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="chamber">Chamber Responsive Design</a></li>
             <li><a href="chamber/discover.html">Chamber Discover Page</a></li>
             <li><a href="chamber/join.html">Chamber Join Page</a></li>
+            <li><a href="chamber/directory.html">Chamber Directory Page</a></li>
         </ul>
         <footer>
             <p class="copyright"></p>
