ADDED WEATHER API FUNCTIONALITY

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,10 +67,17 @@
 
         <section class="colored home-weather">
             <h2>Weather</h2>
-            <p>Cloudy today, <span id="degrees">30</span> °F <br>
-            </p>
-            <p>Wind Speed: <span id="wind-speed">3.5</span>km/h</p>
-            <p><span id="wind-chill"></span></p>
+            <h3><span id="place"></span> City</h3>
+                <div class="current-weather">
+                    <img src="#" id="weathericon" alt="" />
+                    <div class="c-w-text">
+                        <span id="currentTemp"></span>
+                        <p id="weather-desc"></p>
+                    </div>
+                  </div>
+                <p class="w-speed"><span id="windSpeed"></span>m/s</p>
+                <p class="w-chill"><span id="wind-chill"></span> </p>
+                <span id="icon-src"></span>
         </section>
 
         <section class="home-news">
