fixed weather api css

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,7 +67,7 @@
 
         <section class="colored home-weather">
             <h2>Weather</h2>
-            <h3><span id="place"></span> City</h3>
+            <h3><span id="place"></span>AKA Jubilife City</h3>
                 <div class="current-weather">
                     <img src="#" id="weathericon" alt="" />
                     <div class="c-w-text">
