--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="chamber/discover.html">Chamber Discover Page</a></li>
             <li><a href="chamber/join.html">Chamber Join Page</a></li>
             <li><a href="chamber/directory.html">Chamber Directory Page</a></li>
+            <li><a href="contact.html">Chamber Contact Us Page</a></li>
         </ul>
         <footer>
             <p class="copyright"></p>
