--- a/templesuites/index.html
+++ b/templesuites/index.html
@@ -31,7 +31,7 @@
         <button id="menuButton"><span>&#9776;</span><span>X</span></button>
         <ul id="mainNav">
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#">Temples</a></li>
+          <li><a href="temples.html">Temples</a></li>
           <li><a href="#">Reservations</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Receptions</a></li>
