--- a/templesuites/temples.html
+++ b/templesuites/temples.html
@@ -41,7 +41,7 @@
     </header>
 
     <main class="temples-font">
-        <h1>Directory</h1>
+        <h1>Temples</h1>
           <div class="botons">
               <button id="gridMode"><img src="images/grid-icon.png" alt="grid-icon" width="20" height="20"></button>
               <button id="listMode"><img src='images/list-icon.png' alt="list icon" width="20" height="20"></button>
