created reservations page

--- a/templesuites/index.html
+++ b/templesuites/index.html
@@ -32,7 +32,7 @@
         <ul id="mainNav">
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="temples.html">Temples</a></li>
-          <li><a href="#">Reservations</a></li>
+          <li><a href="reservations.html">Reservations</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Receptions</a></li>
           <li><a href="#">Temple Missionaries</a></li>
@@ -115,7 +115,7 @@
       <div class="footer-content-1">
         <div class="footer-logo-side">
           <img src="images/templeinnlogo.png" alt="temple inn logo" />
-          <p>Temple Inn and Suites<br />Bethesda, MD<br /><a href="https://support.google.com/maps/answer/144361?co=GENIE.Platform%3dDesktop&hl=en">Map</a></p>
+          <p>Temple Inn and Suites<br />Bethesda, MD<br /><a href="https://goo.gl/maps/i3xfBYfmYVgfRSJWA">Map</a></p>
         </div>
         <div class="footer-contact-side">
           <p>thisisafakeemail@gmail.com<br />(123) 456-7890</p>
