--- a/templesuites/thank-you.html
+++ b/templesuites/thank-you.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Temple page of the Temple Inn and Suites site"
+      content="Thank You!"
     />
     <meta name="author" content="Oscar Peterson" />
 
-    <title>Temples | Temple Inn and Suites</title>
+    <title>Thank You! | Temple Inn and Suites</title>
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/small.css" />
@@ -31,7 +31,7 @@
         <button id="menuButton"><span>&#9776;</span><span>X</span></button>
         <ul id="mainNav">
           <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="temples.html">Temples</a></li>
+          <li><a href="temples.html">Temples</a></li>
           <li><a href="reservations.html">Reservations</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Receptions</a></li>
@@ -40,23 +40,20 @@
       </nav>
     </header>
 
-    <main class="temples-font">
-        <h1>Temples</h1>
-          <div class="botons">
-              <button id="gridMode"><img src="images/grid-icon.png" alt="grid-icon" width="20" height="20"></button>
-              <button id="listMode"><img src='images/list-icon.png' alt="list icon" width="20" height="20"></button>
-          </div>
-          <div class="shops grid" id="on"></div>
-  
-  
-          
-      </main>
+    <main>
+        <div class="thanks">
+            <h1>Thank you!</h1>
+            <p>We have received your request and we will notify you as soon as we have completed your reservation.</p>
+            <a href="index.html">Return to Home page</a>
+        </div>
+    </main>
+
 
     <footer>
         <div class="footer-content-1">
           <div class="footer-logo-side">
             <img src="images/templeinnlogo.png" alt="temple inn logo" />
-            <p>Temple Inn and Suites<br />Bethesda, MD<br /><a href=".https://goo.gl/maps/i3xfBYfmYVgfRSJWA">Map</a></p>
+            <p>Temple Inn and Suites<br />Bethesda, MD<br /><a href="https://goo.gl/maps/i3xfBYfmYVgfRSJWA">Map</a></p>
           </div>
           <div class="footer-contact-side">
             <p>thisisafakeemail@gmail.com<br />(123) 456-7890</p>
@@ -67,7 +64,7 @@
           Peterson | WDD 230
         </p>
       </footer>
-      <script src="js/temples.js"></script>
+      
       <script src="js/homeScript.js"></script>
     </body>
   </html>
