completed Services page

--- a/templesuites/reservations.html
+++ b/templesuites/reservations.html
@@ -33,7 +33,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="temples.html">Temples</a></li>
           <li class="active"><a href="reservations.html">Reservations</a></li>
-          <li><a href="#">Services</a></li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="#">Receptions</a></li>
           <li><a href="#">Temple Missionaries</a></li>
         </ul>
