completed receptions page

--- a/templesuites/services.html
+++ b/templesuites/services.html
@@ -34,17 +34,17 @@
           <li><a href="temples.html">Temples</a></li>
           <li><a href="reservations.html">Reservations</a></li>
           <li class="active"><a href="services.html">Services</a></li>
-          <li><a href="#">Receptions</a></li>
+          <li><a href="receptions.html">Receptions</a></li>
           <li><a href="#">Temple Missionaries</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
-        <h2>Services</h2>
+        <h1>Services</h1>
         <div class="service-grid">
             <div class="service-headline">
-                <p>Welcome! This page gives a rundown of the services and amenties we provide at our inns. 
+                <p>Welcome! This page gives a rundown of the services and amenities we provide at our inns. 
                     If you have any questions, please do not hesitate to contact us and ask!
                 </p>
                 
@@ -56,7 +56,7 @@
                     <li>A playroom and low-cost, short-term babysitting services for the children of patrons</li>
                     <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li>
                     <li>Temple history themed reception and sitting area</li>
-                    <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li>
+                    <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving. See <a href="receptions.html">Receptions</a> for more info!</li>
                     <li>A family search center that supports family search and ordinance work</li>
                 </ul>
             </div>
