--- a/templesuites/temples.html
+++ b/templesuites/temples.html
@@ -34,7 +34,7 @@
           <li class="active"><a href="temples.html">Temples</a></li>
           <li><a href="reservations.html">Reservations</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="#">Receptions</a></li>
+          <li><a href="receptions.html">Receptions</a></li>
           <li><a href="#">Temple Missionaries</a></li>
         </ul>
       </nav>
