--- a/templesuites/reservations.html
+++ b/templesuites/reservations.html
@@ -35,7 +35,7 @@
           <li class="active"><a href="reservations.html">Reservations</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="receptions.html">Receptions</a></li>
-          <li><a href="#">Temple Missionaries</a></li>
+          <li><a href="missionary.html">Temple Missionaries</a></li>
         </ul>
       </nav>
     </header>
