--- a/templesuites/thank-you.html
+++ b/templesuites/thank-you.html
@@ -43,7 +43,7 @@
     <main>
         <div class="thanks">
             <h1>Thank you!</h1>
-            <p>We have received your request and we will notify you as soon as we have completed your reservation.</p>
+            <p>We have received your inquiry and will contact you with more information.</p>
             <a href="index.html">Return to Home page</a>
         </div>
     </main>
