--- a/templesuites/index.html
+++ b/templesuites/index.html
@@ -90,8 +90,8 @@
             Check out our Instagram page for all kinds of pictures from happy visitors! Or, 
             visit our Facebook page to interact with others who are interested in our services!
           </p>
-          <a href="#">Instagram</a>
-          <a href="#">Facebook</a>
+          <a href="https://www.instagram.com/">Instagram</a>
+          <a href="https://www.facebook.com/">Facebook</a>
         </section>
 
         
